[package]
name = "papa_klement"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
chrono = { version = "0.4.23", features = ["clock", "serde"] }
dotenvy = "0.15.6"
log = "0.4.17"
mongodb = "2.3.1"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "cache",
    "model",
    "rustls_backend",
] }
tokio = { version = "1.23.0", features = ["full"] }
