[package]
name = "papa_klement"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
chrono = { version = "0.4.23", features = ["clock", "serde"] }
dotenvy = "0.15.6"
log = "0.4.17"
mongodb = "2.3.1"
once_cell = "1.17.0"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serenity = { version = "0.12.1", default-features = false, features = [
    "client",
    "gateway",
    "cache",
    "model",
    "utils",
    "rustls_backend",
] }
sha2 = "0.10.6"
songbird = { version = "0.4.1", features = ["builtin-queue"] }
tokio = { version = "1.23.0", features = ["full"] }
tokio-stream = "0.1.11"
